--- a/site/css/alternative.css
+++ b/site/css/alternative.css
@@ -5308,11 +5308,6 @@ textarea.form-control-lg {
   border-color: #41464b;
 }
 
-.blocktext {
-    margin-left: auto;
-    margin-right: auto;
-}
-
 .list-group-item-success {
   color: #0f5132;
   background-color: #d1e7dd;
@@ -11397,7 +11392,7 @@ hr.divider-light {
 header.masthead {
   padding-top: 10rem;
   padding-bottom: calc(10rem - 4.5rem);
-  background: linear-gradient(to bottom, rgba(92, 77, 66, 0.8) 0%, rgba(92, 77, 66, 0.8) 100%), url("../assets/img/bgcine.jpg");
+  background: linear-gradient(to bottom, rgba(92, 77, 66, 0.8) 0%, rgba(92, 77, 66, 0.8) 100%), url("../assets/img/index.jpg");
   background-position: center;
   background-repeat: no-repeat;
   background-attachment: scroll;
